# ai-research-agent

./: .gitignore  README.md  main.py  pyproject.toml  s -ExecutionPolicy RemoteSigned) ; (& dcourse-Gen-AI.venvScriptsActivate.ps1)  test.py
1_first_agent/: basic_agent.py
2_agent_with_tools/: agent_with_tools.py
5_eval_func/: fun_eval.py  inventory_agent.py  utils.py
7_eval_op_metrics/: func_eval.py  inventory_agent.py
8_guardrails/: guardrails_1.py  guardrails_2.py
leave_management_mcp/: main.py  test_client.py
multimodal_agent/: multimodal_1.py  multimodal_2.py
reasoning_agent/: reasoning_agent.py
