[project]
name = "course-gen-ai"
version = "0.1.0"
description = "AI Course Generation Platform"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi",
    "uvicorn",
    "python-dotenv",
    "langchain-community>=0.3",
    "langchain-core>=0.3",
    "langchain-groq",
    "wikipedia>=1.4.0",
    "langchain==0.3.25",
    "ddgs>=9.14.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false


[project]
name = "course-gen-ai"
version = "0.1.0"


